# ipsnarf

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.in  mkinstalldirs
etc/: ipsnarf.conf-dist
include/: config.h.in  ipsnarf.h
src/: Makefile.am  Makefile.in  conf.c  ipsnarf.c  util.c  worker.c
